moved the "javaOptions" used by tests and tools run in a seperate JVM to the central build.sbt file
Signed-off-by: Michael Eichberg <mail@michael-eichberg.de>